- refine image adress in html.

--- a/Lingang.City.Brain/View/Industry/Garden/TopCompanyInfo.html
+++ b/Lingang.City.Brain/View/Industry/Garden/TopCompanyInfo.html
@@ -85,13 +85,13 @@
                         <div class="cy-qy-div flex">
                             <button class="cy-qy-button1">环节</button>
                             <button class="cy-qy-button3"><em class="testAerial">14</em>个</button>
-                            <button class="cy-qy-button4"><img src="../Content/images/cy-qy-div-icon4.gif" /></button>
+                            <button class="cy-qy-button4"><img src="Content/images/cy-qy-div-icon4.gif" /></button>
                             <button class="cy-qy-button5"><em class="testAerial">9</em>个</button>
                         </div>
                         <div class="cy-qy-div flex">
                             <button class="cy-qy-button1">审批<br>过程</button>
                             <button class="cy-qy-button3">至少<em class="testAerial">3</em>次</button>
-                            <button class="cy-qy-button4"><img src="../Content/images/cy-qy-div-icon4.gif" /></button>
+                            <button class="cy-qy-button4"><img src="Content/images/cy-qy-div-icon4.gif" /></button>
                             <button class="cy-qy-button5"><em class="testAerial">1</em>次</button>
                         </div>
                         <div class="cy-qy-div cy-qy-divlast">一网通办“零见面”</div>
@@ -107,13 +107,13 @@
                         <div class="cy-qy-div flex">
                             <button class="cy-qy-button1">表单</button>
                             <button class="cy-qy-button3"><em class="testAerial">11</em>张</button>
-                            <button class="cy-qy-button4"><img src="../Content/images/cy-qy-div-icon4.gif" /></button>
+                            <button class="cy-qy-button4"><img src="Content/images/cy-qy-div-icon4.gif" /></button>
                             <button class="cy-qy-button5"><em class="testAerial">1</em>张</button>
                         </div>
                         <div class="cy-qy-div flex">
                             <button class="cy-qy-button1">时间</button>
                             <button class="cy-qy-button3"><em class="testAerial">9</em>天</button>
-                            <button class="cy-qy-button4"><img src="../Content/images/cy-qy-div-icon4.gif" /></button>
+                            <button class="cy-qy-button4"><img src="Content/images/cy-qy-div-icon4.gif" /></button>
                             <button class="cy-qy-button5"><em class="testAerial">3</em>天</button>
                         </div>
                         <div class="cy-qy-div cy-qy-divlast">免费、省时、省力、专业</div>
