--- a/Lingang.City.Brain/View/Society/L_CameraList.html
+++ b/Lingang.City.Brain/View/Society/L_CameraList.html
@@ -1,17 +1,17 @@
 ﻿<!--左侧视频轮循列表-->
 <ul class="sxt-videoul flex">
     <li class="sxt-videoli">
-        <video class="video-js vjs-default-skin vjs-big-play-centered vedioimg" controls preload="none" data-setup="{}" poster="../Content/images/sxt-videoli.png">
+        <video class="video-js vjs-default-skin vjs-big-play-centered vedioimg" controls preload="none" data-setup="{}" poster="Content/images/sxt-videoli.png">
             <source src="../../Scripts/Tools/vedio/京东云智能城市怀化.flv" type="video/flv">
         </video>
     </li>
     <li class="sxt-videoli">
-        <video class="video-js vjs-default-skin vjs-big-play-centered vedioimg" controls preload="none" data-setup="{}" poster="../Content/images/sxt-videoli.png">
+        <video class="video-js vjs-default-skin vjs-big-play-centered vedioimg" controls preload="none" data-setup="{}" poster="Content/images/sxt-videoli.png">
             <source src="http://106.14.152.119:8082/videoGetStream/103.214.87.67:11937/citybrain/31011900011328037014.flv?vhost=cb.alivecdn.com" type="video/flv">
         </video>
     </li>
     <li class="sxt-videoli">
-        <video class="video-js vjs-default-skin vjs-big-play-centered vedioimg" controls preload="none" data-setup="{}" poster="../Content/images/sxt-videoli.png">
+        <video class="video-js vjs-default-skin vjs-big-play-centered vedioimg" controls preload="none" data-setup="{}" poster="Content/images/sxt-videoli.png">
             <source src="http://106.14.152.119:8082/videoGetStream/103.214.87.67:11937/citybrain/31011900011328037014.flv?vhost=cb.alivecdn.com" type="video/flv">
         </video>
     </li>
