--- a/Lingang.City.Brain/View/Society/Left01_Container.html
+++ b/Lingang.City.Brain/View/Society/Left01_Container.html
@@ -1,5 +1,5 @@
 ﻿<!--左侧第一列DIV-->
-<div class="twocol-top"><img src="../Content/images/twocol-topicon.png"><span>临港</span></div>
+<div class="twocol-top"><img src="Content/images/twocol-topicon.png"><span>临港</span></div>
 <div class="twocol-cont">
     <!-- 传感器 -->
     <div class="divbox clearfix">
