--- a/Lingang.City.Brain/View/Society/Left02_Container.html
+++ b/Lingang.City.Brain/View/Society/Left02_Container.html
@@ -1,5 +1,5 @@
 ﻿
- <div class="twocol-top"><span>社区</span><img src="../Content/images/twocol-topicon.png"></div>
+ <div class="twocol-top"><span>社区</span><img src="Content/images/twocol-topicon.png"></div>
     <div class="twocol-cont">
 
         <!-- 社区统计 -->
