--- a/Lingang.City.Brain/View/Society/R_EventDetail.html
+++ b/Lingang.City.Brain/View/Society/R_EventDetail.html
@@ -5,7 +5,7 @@
     </div>
     <div class="boxcont">
         <div class="box-leftpic">
-        <!--<img src="../Content/images/poi-leftpic.png">-->
+        <!--<img src="Content/images/poi-leftpic.png">-->
             <img src="../../Content/images/poi-leftpic.png" />
         </div>
         <dic class="box-rightinfo">
