--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetailPic.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetailPic.html
@@ -5,7 +5,7 @@
     </div>
     <div class="boxcont clearfix" id="eventdetail">
         <div class="box-leftpic fl" style="text-align:center;">
-            <img src="../Content/images/20190320-1b77e4e7-0a580a000f62-00000008-000090d4.jpg" style="width:3rem;" />
+            <img src="Content/images/20190320-1b77e4e7-0a580a000f62-00000008-000090d4.jpg" style="width:3rem;" />
         </div>
         <dic class="box-rightinfo fl" style="margin-top:.2rem; font-size:.35rem; line-height:.7rem;">
             <ul>
