--- a/Lingang.City.Brain/View/SocietyNew/Center_01.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_01.html
@@ -1,6 +1,6 @@
 ﻿
 <div class="statistic-box twocol" style="z-index:999;display:block;">
-    <button class="statistic-slidebtn"><img src="../Content/images/statistic-arrow.png"></button>
+    <button class="statistic-slidebtn"><img src="Content/images/statistic-arrow.png"></button>
     <div class="statistic-slidediv">
         <div class="pjc-statistic">
             <dl>
