--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone.html
@@ -170,7 +170,7 @@
                 </li>
                 <!--
                 <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="../Content/images/sqzz-lr-31.png"></div>
+                    <div class="item-l"><img src="Content/images/sqzz-lr-31.png"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>于文龙</span></li>
