--- a/Lingang.City.Brain/View/Tour/Left01_Container.html
+++ b/Lingang.City.Brain/View/Tour/Left01_Container.html
@@ -1,4 +1,4 @@
-﻿    <!-- <div class="twocol-top"><img src="../Content/images/twocol-topicon.png"><span>临港</span></div> -->
+﻿    <!-- <div class="twocol-top"><img src="Content/images/twocol-topicon.png"><span>临港</span></div> -->
     <div class="twocol-cont">
 
         <!-- 游客画像 -->
