--- a/Lingang.City.Brain/View/Tour/Left02_Container.html
+++ b/Lingang.City.Brain/View/Tour/Left02_Container.html
@@ -1,4 +1,4 @@
-﻿    <!-- <div class="twocol-top"><span>社区</span><img src="../Content/images/twocol-topicon.png"><em>传感器</em></div> -->
+﻿    <!-- <div class="twocol-top"><span>社区</span><img src="Content/images/twocol-topicon.png"><em>传感器</em></div> -->
     <div class="twocol-cont">
 
 
