--- a/Lingang.City.Brain/View/TourNew/Center_EventDetail.html
+++ b/Lingang.City.Brain/View/TourNew/Center_EventDetail.html
@@ -5,7 +5,7 @@
     </div>
     <div class="boxcont">
         <div class="box-leftpic" style="text-align:center;">
-            <img src="../Content/images/20190320-1b77e4e7-0a580a000f62-00000008-000090d4.jpg" />
+            <img src="Content/images/20190320-1b77e4e7-0a580a000f62-00000008-000090d4.jpg" />
         </div>
         <dic class="box-rightinfo">
             <ul>
