--- a/Lingang.City.Brain/View/TourNew/Right_First_01.html
+++ b/Lingang.City.Brain/View/TourNew/Right_First_01.html
@@ -17,7 +17,7 @@
             <a class="jtxx-tab">2月8日</a>
         </div>-->
         <div class="rycltj-datebox clearfix">
-            <button type="button" class="rycltj-datebtn-pre"><img src="../Content/images/rycltj-datebtn.png"></button>
+            <button type="button" class="rycltj-datebtn-pre"><img src="Content/images/rycltj-datebtn.png"></button>
             <div class="rycltj-datediv flex" id="rq">
                 <a class="rycltj-datetab active">2月2日</a>
                 <a class="rycltj-datetab">2月3日</a>
@@ -27,7 +27,7 @@
                 <a class="rycltj-datetab">2月7日</a>
                 <a class="rycltj-datetab">2月8日</a>
             </div>
-            <button type="button" class="rycltj-datebtn-next"><img src="../Content/images/rycltj-datebtn.png"></button>
+            <button type="button" class="rycltj-datebtn-next"><img src="Content/images/rycltj-datebtn.png"></button>
         </div>
         <div class="chartdiv rycltj-chartdiv">
             <div class="rycltj-chart" id="rycltj-chart"></div>
