--- a/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
+++ b/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
@@ -28,7 +28,7 @@
         <button type="button" class="real-scene" onclick="require(['mainMenu'], function (data) { data.ChangeLight(1); })">实景</button>
         <button type="button" class="night-scene active" onclick="require(['mainMenu'], function (data) { data.ChangeLight(0); })">夜景</button>
     </span>
-    <span class="header-temp" id="header_tempimg"><img src="../Content/images/weathy_04.png"><span id="header_temp">10°</span></span>
+    <span class="header-temp" id="header_tempimg"><img src="Content/images/weathy_04.png"><span id="header_temp">10°</span></span>
     <span class="header-date" id="pj-year">2019.01.30</span>
     <span id="pj-houre">10:58:49</span>
     <button type="button" class="header-cancel"></button>
