--- a/Lingang.City.Brain/View/Industry/Garden/Bottom_Menu.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Bottom_Menu.html
@@ -1,7 +1,7 @@
 ﻿<!-- 底部导航栏 -->
 <!--<div class="real-neight flex">
-    <button type="button" class="real-scene" onclick="require(['mainMenu'], function (data) { data.ChangeLight(1); })">实景</button>
-    <button type="button" class="night-scene active" onclick="require(['mainMenu'], function (data) { data.ChangeLight(0); })">夜景</button>
+    <button type="button" class="real-scene" onclick="require(['common'], function (data) { data.ChangeLight(1); })">实景</button>
+    <button type="button" class="night-scene active" onclick="require(['common'], function (data) { data.ChangeLight(0); })">夜景</button>
 </div>-->
 <ul class="flex">
     <li class="">楼宇</li>
