--- a/Lingang.City.Brain/View/Society/Bottom_Container.html
+++ b/Lingang.City.Brain/View/Society/Bottom_Container.html
@@ -1,6 +1,6 @@
 ﻿<div class="real-neight flex">
-    <button type="button" class="real-scene" onclick="require(['mainMenu'], function (data) { data.ChangeLight(1); })">实景</button>
-    <button type="button" class="night-scene active" onclick="require(['mainMenu'], function (data) { data.ChangeLight(0); })">夜景</button>
+    <button type="button" class="real-scene" onclick="require(['common'], function (data) { data.ChangeLight(1); })">实景</button>
+    <button type="button" class="night-scene active" onclick="require(['common'], function (data) { data.ChangeLight(0); })">夜景</button>
 </div>
 <ul class="flex">
     <li class="">传感器</li>
