--- a/Lingang.City.Brain/View/TourNew/Left_First_03.html
+++ b/Lingang.City.Brain/View/TourNew/Left_First_03.html
@@ -5,6 +5,6 @@
     </h3>
     <div class="divcont">
         <div class="chartdiv ykqsfx-chartdiv"><div class="ykqsfx-chart" id="ykqsfx-chart"></div></div>
-     
+        <button class="chartzoomin" onclick="require('t_Echart').loadBigChart()"></button> 
     </div>
 </div>
