- add menu control for pc.

--- a/Lingang.City.Brain/Views/BigScreen/Index.cshtml
+++ b/Lingang.City.Brain/Views/BigScreen/Index.cshtml
@@ -10,6 +10,9 @@
     </div>*@
 <!-- 头部 -->
 <script data-main="@Url.Content("~/Scripts/Shared/Main_S")" type="text/javascript" src="~/Scripts/require.js"></script>
+<script src="@Url.Content("~/signalr/hubs")" type="text/javascript"></script>
+<script src="~/Scripts/Shared/SignalRHub.js"></script> 
+
 <div class="header clearfix" id="header_menu" style="z-index:999;display:none">
     <div class="header-leftmenu">
         <button class="header-menu">数字星空</button>
