--- a/Lingang.City.Brain/View/Industry/Garden/UnmannedCarDetail.html
+++ b/Lingang.City.Brain/View/Industry/Garden/UnmannedCarDetail.html
@@ -1,35 +1,14 @@
 ﻿<!-- 无人车详情 -->
 
-<div class="loudong" id="center01_01">
-    <div class="loudong-top"><span class="testAerial" id="buildingName_detail">15</span>号<span class="testAerial">A</span>栋</div>
-    <div class="loudong-div">
-        <ul class="loudong-ul">
-            <li class="loudong-li"><div>乘坐人员头像：</div><span><em class="testAerial" id="buildingArea_detail">1200</em>㎡</span></li>
-            <li class="loudong-li">
-                <div>乘车时间：</div>
-                <span class="loudong-select" id="buildingFloors_detail"></span>
-                <!--<select class="loudong-select" id="buildingFloors_detail">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                    <option>6</option>
-                </select>-->
-                <span class="select-valuespan">层</span>
-            </li>
-            <li class="loudong-li"><div>目的地：</div><span><em class="testAerial" id="companyCount_detail">18</em>家</span></li>
-            <li class="loudong-li"><div>到达时间：</div><span><em class="testAerial" id="occupancyRate_detail">2019-</em></span></li>
-        </ul>
-    </div>
-    <div class="loudong-div loudong-div-floor">
-        <ul class="loudong-ul clearfix" id="loudong-ul">
-            <!--<li class="loudong-floor"><span class="testAerial">1</span>楼</li>
-            <li class="loudong-floor active"><span class="testAerial">2</span>楼</li>
-            <li class="loudong-floor"><span class="testAerial">3</span>楼</li>
-            <li class="loudong-floor"><span class="testAerial">4</span>楼</li>
-            <li class="loudong-floor"><span class="testAerial">5</span>楼</li>
-            <li class="loudong-floor"><span class="testAerial">6</span>楼</li>-->
-        </ul>
+<div class="poi-guiji" id="center01_01" style="right:25rem;position:absolute;top:5rem;padding:.5rem .3rem;box-sizing:border-box;">
+    <div class="boxcont">
+        <dic class="sqzz-sjjd-div flex">
+            <img src="Content/images/personCardIMG.jpg" style="width: 1.4rem; height: 1.7rem; margin-right: .2rem;">
+            <ul class="sqzz-sjjd-list1" style="width:calc(100% - 1.6rem); line-height:.58rem;">
+                <li><span>上车时间：</span><em>09:20:00</em></li>
+                <li><span>目的地：</span><em>五号楼</em></li>
+                <li><span>预计到达时间：</span><em> 10:20:00</em></li>
+            </ul>
+        </dic>
     </div>
 </div>
