园区事件列表

--- a/Lingang.City.Brain/Content/page.css
+++ b/Lingang.City.Brain/Content/page.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 .pagination { 
     font-size: 80%;
@@ -7,21 +7,21 @@
 } 
 .pagination a {text-decoration: none;}
 .pagination .current.prev, .pagination .current.next {
-    background: none repeat scroll 0 0 #1963a7;
-    border-color: #217bce;
+    background: none repeat scroll 0 0 #0084d9;
+    border-color: #067ac5;
     color: #ffffff;
     padding-left: 2px;
     padding-right: 2px;
 }
 .pagination .current {
-    background: none repeat scroll 0 0 #1963a7;
-    border: 1px solid #217bce;
+    background: none repeat scroll 0 0 #0084d9;
+    border: 1px solid #067ac5;
     color: #FFFFFF;
 }
 .pagination a, .pagination span {
-    background: none repeat scroll 0 0 #030e14;
-    border: 1px solid #092533;
-    color: #05aefd;
+    background: none repeat scroll 0 0 #3e3e3e;
+    border: 1px solid #292929;
+    color: #fff;
     display: inline-block;
     margin-bottom: 5px;
     margin-right: .2em;
