--- a/Lingang.City.Brain/View/Industry/Garden/UnmannedCarDetail.html
+++ b/Lingang.City.Brain/View/Industry/Garden/UnmannedCarDetail.html
@@ -3,7 +3,7 @@
 <div class="poi-guiji" id="center01_01" style="right:25rem;position:absolute;top:5rem;padding:.5rem .3rem;box-sizing:border-box;">
     <div class="boxcont">
         <dic class="sqzz-sjjd-div flex">
-            <img src="Content/images/personCardIMG.jpg" style="width: 1.4rem; height: 1.7rem; margin-right: .2rem;">
+            <img src="Content/images/personCardIMG.png" style="width: 1.4rem; height: 1.7rem; margin-right: .2rem;">
             <ul class="sqzz-sjjd-list1" style="width:calc(100% - 1.6rem); line-height:.58rem;">
                 <li><span>上车时间：</span><em>09:20:00</em></li>
                 <li><span>目的地：</span><em>五号楼</em></li>
