中控台花瓣控制

--- a/Lingang.City.Brain/View/Industry/Garden/TopCompanyInfo.html
+++ b/Lingang.City.Brain/View/Industry/Garden/TopCompanyInfo.html
@@ -4,7 +4,7 @@
     <button class="cy-qy-menu-close" onclick="require('g_Home').closeTopCompanyInfo();">关闭</button>
     <ul class="cy-qy-menu">
         <li class="cy-qy-menuli">
-            <a href="javascript:require('g_Home').FlowerClickFn(0);">
+            <a href="javascript:void(0);">
                 <div class="cy-qy-title">产业政策</div>
                 <div class="cy-qy-divcont divcont-setright cy-qy-zc-divcont" style="top: .4rem;">
                     <div class="cy-qy-divcont-child">
@@ -18,7 +18,7 @@
             </a>
         </li>
         <li class="cy-qy-menuli">
-            <a href="javascript:require('g_Home').FlowerClickFn(1);">
+            <a href="javascript:void(0);">
                 <div class="cy-qy-title">人才政策</div>
                 <div class="cy-qy-divcont divcont-setright cy-qy-zc-divcont">
                     <div class="cy-qy-divcont-child">
@@ -32,7 +32,7 @@
             </a>
         </li>
         <li class="cy-qy-menuli">
-            <a href="javascript:require('g_Home').FlowerClickFn(2);">
+            <a href="javascript:void(0);">
                 <div class="cy-qy-title">财政税收政策</div>
                 <div class="cy-qy-divcont divcont-setright cy-qy-zc-divcont">
                     <div class="cy-qy-divcont-child">
@@ -46,7 +46,7 @@
             </a>
         </li>
         <li class="cy-qy-menuli">
-            <a href="javascript:require('g_Home').FlowerClickFn(3);">
+            <a href="javascript:void(0);">
                 <div class="cy-qy-title">金融政策</div>
                 <div class="cy-qy-divcont divcont-setright cy-qy-zc-divcont">
                     <div class="cy-qy-divcont-child">
@@ -60,7 +60,7 @@
             </a>
         </li>
         <li class="cy-qy-menuli">
-            <a href="javascript:require('g_Home').FlowerClickFn(4);">
+            <a href="javascript:void(0);">
                 <div class="cy-qy-title">其他</div>
                 <div class="cy-qy-divcont divcont-setright cy-qy-zc-divcont" style="top: 2.5rem;">
                     <div class="cy-qy-divcont-child">
@@ -74,9 +74,9 @@
             </a>
         </li>
 
-        <li class="cy-qy-menuli"><a href="javascript:require('g_Home').FlowerClickFn(5);"><div class="cy-qy-title">物业报修</div></a></li>
-        <li class="cy-qy-menuli"><a href="javascript:require('g_Home').FlowerClickFn(6);"><div class="cy-qy-title">生活服务</div></a></li>
-        <li class="cy-qy-menuli"><a href="javascript:require('g_Home').FlowerClickFn(7);"><div class="cy-qy-title">人才服务</div></a></li>
+        <li class="cy-qy-menuli"><a href="javascript:void(0);"><div class="cy-qy-title">物业报修</div></a></li>
+        <li class="cy-qy-menuli"><a href="javascript:void(0);"><div class="cy-qy-title">生活服务</div></a></li>
+        <li class="cy-qy-menuli"><a href="javascript:void(0);"><div class="cy-qy-title">人才服务</div></a></li>
         <li class="cy-qy-menuli">
             <a href="javascript:require('g_Home').FlowerClickFn(8);">
                 <div class="cy-qy-title">入住服务</div>
@@ -100,7 +100,7 @@
             </a>
         </li>
         <li class="cy-qy-menuli">
-            <a href="javascript:require('g_Home').FlowerClickFn(9);">
+            <a href="javascript:void(0)">
                 <div class="cy-qy-title">代理开办</div>
                 <div class="cy-qy-divcont divcont-setleft" style="top: .4rem;">
                     <div class="cy-qy-divcont-child">
@@ -130,27 +130,29 @@
     function cyqyMenuLiFun() {
 
         // 显示圆圈
-        $(".cy-qy-navbar").click(function () {
-            $(this).addClass("active").children(".cy-qy-menu").css({ "transition": "transform .2s" });
-            $(this).find(".cy-qy-title").each(function () {
-                $(this).css({
-                    "transition-delay": "1s",
-                    "transition-duration": ".3s",
-                    "opacity": 1,
-                    "padding": ".1rem .4rem",
-                })
-            })
-            $(this).find(".cy-qy-menu-close").addClass("active");
-        })
+        //$(".cy-qy-navbar").click(function () {
+        //    $(".cy-qy-navbar").addClass("active").children(".cy-qy-menu").css({ "transition": "transform .2s" });
+        //    $(".cy-qy-navbar").find(".cy-qy-title").each(function () {
+        //        $(this).css({
+        //            "transition-delay": "1s",
+        //            "transition-duration": ".3s",
+        //            "opacity": 1,
+        //            "padding": ".1rem .4rem",
+        //        })
+        //    })
+        //    $(".cy-qy-navbar").find(".cy-qy-menu-close").addClass("active");
+        //})
 
         // 显示圆圈信息
         $(".cy-qy-menu a").each(function (index, element) {
             $(this).click(function (ev) {
                 if (ev.target == $(this)[0]) {
-                    //require('g_Home').FlowerClickFn(this);
+                    require('g_Home').FlowerClickFn(index);
                     $(this).addClass("active").parents(".cy-qy-menuli").siblings().find("a").removeClass("active").find(".cy-qy-divcont").removeClass("active");
                     $(this).find(".cy-qy-divcont").css({ "transition-duration": ".8s" }).addClass("active");
                 }
+                return false;
+                
             })
         })
 
