--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -284,6 +284,7 @@ body{
 }
 
 .divbox{
+    z-index:999;
 	position: absolute;
 	left: 1.5rem;
 	top: 3rem;
@@ -2241,12 +2242,13 @@ dd.pjc-statistic-star >form{
 	height: 1.22rem;
 }
 .sqzz-hax-lr1-li{
-	width: calc((100% - .45rem) / 3);
+	/*width: calc((100% - .45rem) / 3);*/
 	height: 100%;
 	margin-right: .15rem;
 	background: rgba(1,7,30,.4);
 	box-shadow: inset 0 0 .3rem rgba(0,148,252,.75);
 	border-radius: .1rem;
+    flex-grow:1;
 }
 .sqzz-hax-lr1-li:last-child{ margin-right: 0; }
 .sqzz-hax-lr1-li>button{
