Main_D.js添加sl_street，sl_Grid引用

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT2.html
@@ -4,6 +4,9 @@
         <div>社区车辆</div>
     </h3>
     <div class="divcont">
-        <div class="chartdiv sqcl-chartdiv"><div class="sqcl-chart" id="sqcl-chart"></div></div>
+        <div class="chartdiv sqcl-chartdiv">
+            <div class="sqcl-chart" id="sqcl-chart"></div>
+            <button class="chartzoomin"></button>
+        </div>
     </div>
 </div>
