图表控制中心

--- a/Lingang.City.Brain/View/TourNew/Right_First_02.html
+++ b/Lingang.City.Brain/View/TourNew/Right_First_02.html
@@ -3,6 +3,7 @@
     <h3><div id="tcc">停车场使用情况</div></h3>
     <div class="divcont">
         <div class="chartdiv tccsyqk-chartdiv"><div class="tccsyqk-chart" id="tccsyqk-chart"></div></div>
+        <button class="chartzoomin" onclick="require('t_Echart').loadBigChart('Right_First_02')"></button>
         
     </div>
 </div>
