--- a/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
+++ b/Lingang.City.Brain/Views/ControlDesk/Index.cshtml
@@ -12,7 +12,7 @@
 <script data-main="@Url.Content("~/Scripts/Shared/Main_D")" type="text/javascript" src="~/Scripts/require.js"></script>    
 <div class="header clearfix" id="header_menu" style="z-index:999;display:none">
     <div class="header-leftmenu">
-        <button class="header-menu">数字星空</button>
+        <button class="header-menu">数字星空11</button>
         <button class="header-menu active">社区综合</button>
         <button class="header-menu">景区管理</button>
         <button class="header-menu">产业发展</button>
