--- a/Lingang.City.Brain/View/TourNew/Left_First_02.html
+++ b/Lingang.City.Brain/View/TourNew/Left_First_02.html
@@ -5,7 +5,7 @@
     </h3>
     <div class="divcont">
         <div class="chartdiv ykfx-chartdiv"><div class="ykfx-chart" id="ykfx-chart"></div></div>
-        <button class="chartzoomin" onclick="require('t_Echart').loadBigChart('Left_First_02')"></button>
+        <button class="chartzoomin" onclick="require('t_Home').loadBigChart('Left_First_02')"></button>
     </div>
 </div>
 
