--- a/Lingang.City.Brain/View/TourNew/Left_First_04.html
+++ b/Lingang.City.Brain/View/TourNew/Left_First_04.html
@@ -14,6 +14,6 @@
             <li class=""><div>热门话题数</div><span class="testAerial" id="rmhts">2</span></li>
         </ul>
         <div class="chartdiv yqfx-chartdiv"><div class="yqfx-chart" id="yqfx-chart"></div></div>
-        <button class="chartzoomin" onclick="require('t_Echart').loadBigChart('Left_First_04')"></button>
+        <button class="chartzoomin" onclick="require('t_Home').loadBigChart('Left_First_04')"></button>
     </div>
 </div>
