--- a/Lingang.City.Brain/View/TourNew/Right_First_01.html
+++ b/Lingang.City.Brain/View/TourNew/Right_First_01.html
@@ -31,7 +31,7 @@
         </div>
         <div class="chartdiv rycltj-chartdiv">
             <div class="rycltj-chart" id="rycltj-chart"></div>
-            <button class="chartzoomin" onclick="require('t_Echart').loadBigChart('Right_First_01')"></button>
+            <button class="chartzoomin" onclick="require('t_Home').loadBigChart('Right_First_01')"></button>
            
         </div>
 
