--- a/Lingang.City.Brain/View/TourNew/Right_First_03.html
+++ b/Lingang.City.Brain/View/TourNew/Right_First_03.html
@@ -3,7 +3,7 @@
     <h3><div id="jwrsjtjsx">近5日事件统计</div></h3>
     <div class="divcont">
         <div class="chartdiv jwrsjtj-chartdiv"><div class="jwrsjtj-chart" id="jwrsjtj-chart"></div></div>
-        <button class="chartzoomin" onclick="require('t_Echart').loadBigChart('Right_First_03')"></button>
+        <button class="chartzoomin" onclick="require('t_Home').loadBigChart('Right_First_03')"></button>
         
     </div>
 </div>
