--- a/Lingang.City.Brain/View/TourNew/Center_03.html
+++ b/Lingang.City.Brain/View/TourNew/Center_03.html
@@ -1,7 +1,7 @@
 ﻿<div class="center-chart" style="z-index:999;">
     <div class="box-top" >
         <span id="bigechartHead">游客画像</span>
-        <button type="button" class="box-close" onclick="require('t_Echart').closeBigChart();"></button>
+        <button type="button" class="box-close" onclick="require('t_Home').closeBigChart();"></button>
     </div>
     <div class="zoomin-chart" id="Big-chart">
 
