- 人员车辆统计图表修改。

--- a/Lingang.City.Brain/View/TourNew/Left_First_04.html
+++ b/Lingang.City.Brain/View/TourNew/Left_First_04.html
@@ -1,5 +1,5 @@
 ﻿<!-- 舆情分析 -->
-<div id="left01_04" class="divbox divbox-ll clearfix yqfx" style="top:17.5rem; margin-bottom:0;z-index:999;display:block;">
+<div id="left01_04" class="divbox divbox-ll clearfix yqfx" style="top:17.5rem; margin-bottom:0;z-index:990;display:block;">
     <h3 class="hastabbox">
         <div>舆情分析</div>
         <div class="charttabbox flex">
@@ -14,6 +14,6 @@
             <li class=""><div>热门话题数</div><span class="testAerial" id="rmhts">2</span></li>
         </ul>
         <div class="chartdiv yqfx-chartdiv"><div class="yqfx-chart" id="yqfx-chart"></div></div>
-        <button class="chartzoomin" onclick="require('t_Echart').loadBigChart('Left_First_04')"></button>
+        <button class="chartzoomin" onclick="require('t_Echart').loadBigChart('Left_First_04')" style="top:.8rem;"></button>
     </div>
 </div>
