--- a/Lingang.City.Brain/View/TourNew/Left_Second_03.html
+++ b/Lingang.City.Brain/View/TourNew/Left_Second_03.html
@@ -19,7 +19,7 @@
 
         <div class="chartdiv jtxx-chartdiv" style="height:6.5rem;">
             <div class="jtxx-chart" id="jtxx-chart"></div>
-            <button class="chartzoomin" onclick="require('t_Echart').loadBigChart('Left_Second_03')"></button>
+            <button class="chartzoomin" onclick="require('t_Echart').loadBigChart('Left_Second_03')" style="top:.1rem;"></button>
 
             <div class="jtxx-tabbox">
                 <!--<a class="jtxx-tab active">近一周</a>-->
