--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -863,14 +863,15 @@ button.arrowbtn.btnright{
 }
 
 .center-chart{
-	position: fixed;
+	position: absolute;
 	top: 50%;
 	left: 50%;
-	width: 30rem;
-	height: 20rem;
+	width: 25rem;
+	height: 15rem;
 	transform: translate(-50%,-50%);
 	background: rgba(2,16,38,.7);
 	border-radius: .2rem;
+    box-shadow:0px 0px 0.5rem rgba(255,255,255,0.3);
 }
 .center-chart .box-top{
 	height: 1.5rem;
