--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite4.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite4.html
@@ -1,5 +1,5 @@
 ﻿<!-- 巡查员信息 -->
-<div id="left02_04" class="divbox divbox-lr sqzz-wrj-lr3" style="top: 16.5rem;">
+<div id="left02_04" class="divbox divbox-lr sqzz-wrj-lr3" style="top: 16.5rem; z-index:990;">
     <h3><div>巡查员信息</div></h3>
     <div class="divcont sqzz-wrj-lr3">
         <div class="sqzz-wrj-lr3-uldiv scrolldiv" style="max-height: 3.8rem;">
