--- a/Lingang.City.Brain/View/TourNew/Left_Second_02.html
+++ b/Lingang.City.Brain/View/TourNew/Left_Second_02.html
@@ -31,7 +31,7 @@
             </li>
         </ul>
         <div class="sxt-videobox dkl-r-sxt-videobox">
-            <ul class="sxt-videoul flex dkl-r-sxtul">
+            <ul class="sxt-videoul flex dkl-r-sxtul" style=" margin-top:.4rem;">
                 <!--<li class="sxt-videoli prism-player" id="left02_video01"></li>
                 <li class="sxt-videoli prism-player" id="left02_video02"></li>-->
                 <li class="sxt-videoli"><div class="sxt-videoli-div prism-player" id="left02_video01"></div></li>
