- refine aliplayer reference.

--- a/Lingang.City.Brain/Views/Shared/_Layout.cshtml
+++ b/Lingang.City.Brain/Views/Shared/_Layout.cshtml
@@ -9,11 +9,8 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")    
     @Scripts.Render("~/bundles/signalR")    
-    <link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.8.1/skins/default/aliplayer-min.css" />
-    <script type="text/javascript" charset="utf-8" src="https://g.alicdn.com/de/prismplayer/2.8.1/aliplayer-min.js"></script>
+    <link href="~/Scripts/Tools/aliplayer/aliplayer-min.css" rel="stylesheet" />
     <script src="~/Scripts/Tools/vex/js/vex.combined.min.js"></script>
-    @*<script src="@Url.Content("~/signalr/hubs")" type="text/javascript"></script>
-    <script src="~/Scripts/Shared/SignalRHub.js"></script>*@ 
 </head>
 <body style="padding-top:0px;overflow-y:hidden;overflow-x:hidden;" oncontextmenu="return false" ondragstart="return false">
     @*<div style="height:100%">*@
