人员车辆统计图表--放大判断

--- a/Lingang.City.Brain/View/TourNew/Center_03.html
+++ b/Lingang.City.Brain/View/TourNew/Center_03.html
@@ -1,6 +1,6 @@
 ﻿<div class="center-chart" style="z-index:999;">
     <div class="box-top" >
-        <span id="bigechartHead">游客画像</span>
+        <span id="bigechartHead">人员车辆统计</span>
         <button type="button" class="box-close" onclick="require('t_Home').closeBigChart();"></button>
     </div>
     <div class="zoomin-chart" id="Big-chart">
