景区管理UI窗口点击交互

--- a/Lingang.City.Brain/View/TourNew/Bottom_DroneCamera.html
+++ b/Lingang.City.Brain/View/TourNew/Bottom_DroneCamera.html
@@ -2,7 +2,7 @@
 <div class="poiinfo" style="left:58%;top:15%;z-index:999;">
     <div class="box-top">
         无人机视频
-        <button type="button" class="box-close" onclick="require('t_Home').closeCameraDetial()"></button>
+        <button type="button" class="box-close" onclick="require('t_Home').closeDroneCameraDetial()"></button>
     </div>
     <div class="boxcont flex" style="position:relative;width:11.8rem; height:7rem;  overflow:hidden; padding:0;">
         <div class="prism-player video-js" id="bottom_cameradetail"></div>
