--- a/Lingang.City.Brain/View/TourNew/Center_EventDetail.html
+++ b/Lingang.City.Brain/View/TourNew/Center_EventDetail.html
@@ -1,7 +1,7 @@
 ﻿<div class="poiinfo" id="ul_eventdetail" style="z-index:999; position:absolute; left:55%; top:20%;">
     <div class="box-top">
         事件005
-        <button type="button" class="box-close" onclick="require('tl_Event').closeEventDetail()"></button>
+        <button type="button" class="box-close" onclick="require('t_Home').closeEventDetail()"></button>
     </div>
     <div class="boxcont">
         <div class="box-leftpic" style="text-align:center;">
